# VocalizeAI

./: .env.example  .gitignore  .public-sync-deny  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  check_setup.py  pyproject.toml  requirements.txt  run.bat  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
demos/: phase1_stt_mic.py  phase2_stt_llm.py  phase3_full_voice_local.py  phase5_universal_agent_cli.py
docs/: architecture.md  macos-speech-provider.md  provider-api.md
docs/deploy/: linux.md  local.md  pi.md
docs/release/: 24h-stability-evidence.md  RELEASE-FLOW.md  branch-protection.md  layer4-smoke-checklist.md  release-evidence-template.md
frontend/: .eslintrc.json  i18n-config.ts  i18n.ts  index.html  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  playwright.release-audio.config.ts  tsconfig.json  vite.config.ts
frontend/app/: components.css  design-tokens.css  globals.css
frontend/components/: AudioLevelMeter.tsx  BrowserAudioBridge.tsx  ClarificationModal.tsx  ConnectionStateChip.tsx  DeviceProbe.tsx  DeviceSettings.tsx  HandoverPanel.tsx  HangupButton.tsx  LanguageToggle.tsx  LiveConsole.tsx  MerchantLangBadge.tsx  PostCallReview.tsx  PreflightChat.tsx  PreflightSummaryBanner.tsx  ReadinessIndicator.tsx  RedialConfirmModal.tsx  SessionRecoveredToast.tsx  Settings.tsx  TextSupplementInput.tsx  TranscriptStream.tsx  UserTakeoverButton.tsx
frontend/lib/: api.ts  audio.ts  state.ts  ws.ts
frontend/messages/: en.json  zh.json
frontend/scripts/: generate-og.py
frontend/src/: App.tsx  PreviewConsole.tsx  env.ts  i18n.tsx  main.tsx  metadata.ts  router.tsx
frontend/tests/: api.test.ts  audio-bridge.test.tsx  audio.test.ts  clarification-modal.test.tsx  connection-state-chip.test.tsx  create-session-client.test.tsx  device-settings.test.tsx  handover-panel.test.tsx  hangup-button.test.tsx  i18n-bootstrap.test.tsx  i18n.test.tsx  language-toggle.test.tsx  live-console.test.tsx  live-page.test.tsx  merchant-lang-badge.test.tsx  og-cards.test.ts  og-metadata.test.ts  package.test.ts  review-page.test.tsx  (+15 more)
infra/: README.md
install/: dev-install.sh  install.sh  pi-install.sh  public-allowlist.md  uninstall.sh  verify-release.sh
scripts/: README.md  build-macos-release.sh  build-public-filelist.py  smoke.sh  stability-24h-driver.py
src/: __init__.py  ai_clients.py  api.py  audio.py  chatbot.py  chatbot_core.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_app_startup_guards.py  test_cli.py  test_dialogue_callback.py  test_dialogue_clarification.py  test_dialogue_keepalive.py  test_dialogue_merchant_vad.py  test_dialogue_orchestrator.py  test_dialogue_preflight.py  test_dialogue_reactive_holding.py  test_dialogue_relay.py  test_dialogue_state.py  test_dialogue_tools.py  test_dialogue_user_channel.py  test_doctor.py  test_install_scripts.py  test_invite_token_gate.py  test_llm_openai_compat.py  test_llm_thinking_strip.py  test_microphone.py  test_pipeline.py  test_prompt_rendering.py  test_provider_api_clients.py  test_provider_runtime.py  test_public_tree_audit.py  test_release_artifacts.py  test_runner_phase_transitions.py  test_runner_translate_event.py  test_runner_user_takeover.py  test_runtime_paths.py  test_server_app.py  test_server_frames.py  test_server_health.py  test_server_sessions.py  test_server_state.py  test_server_ws_integration.py  test_stt_sensevoice.py  test_task_planner.py  test_task_planner_quality.py  (+2 more)
(+146 files in other folders)
